# odocs

./: .gitignore  CLAUDE.md  pyproject.toml
src/odocs/: __init__.py  __main__.py  cli.py  discovery.py  markdown.py  models.py  parser.py  runner.py
tests/: __init__.py  conftest.py  test_cli.py  test_discovery.py  test_markdown.py  test_models.py  test_parser.py  test_runner.py
